--- a/style.css
+++ b/style.css
@@ -19,16 +19,20 @@ a {
 body,
 .header,
 .left-links,
-.right-links {
+.right-links,
+.hero {
   display: flex;
+}
+
+.header {
+  margin-top: 24px;
+  margin-bottom: 48px;
 }
 
 .left-links,
 .right-links {
   gap: 24px;
   padding: 0;
-  margin-top: 16px;
-  margin-bottom: 16px;
 }
 
 .left-links {
@@ -39,12 +43,53 @@ body,
   font-size: 18px;
 }
 
-.header {
+.header,
+.hero {
   justify-content: space-around;
   align-items: center;
   align-self: stretch;
   background-color: #1F2937;
   margin: 0;
+}
+
+.hero {
+  padding: 64px 64px;
+}
+
+.hero-left,
+.hero-img {
+    margin: 24px 24px;
+}
+
+.hero-left h1 {
+  color: #F9FAF8;
+  font-size: 48px;
+  font-weight: bolder;
+  margin: 0;
+}
+
+.hero-left p,
+.hero-img {
+  color: #E5E7EB;
+  font-size: 18px;
+}
+
+.hero-left button {
+  font-family: Roboto, sans-serif;
+  border: none;
+  border-radius: 8px;
+  color: #F9FAF8;
+  background-color: #3882F6;
+  padding: 8px 24px;
+}
+
+.hero-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
+  min-width: 400px;
+  min-height: 250px;
 }
 
 .header .left-links a {
