--- a/style.css
+++ b/style.css
@@ -39,10 +39,6 @@ body,
   font-size: 24px;
 }
 
-.right-links {
-  font-size: 18px;
-}
-
 .header,
 .hero {
   justify-content: space-around;
@@ -53,12 +49,16 @@ body,
 }
 
 .hero {
-  padding: 64px 64px;
+  padding: 64px 80px;
 }
 
 .hero-left,
 .hero-img {
     margin: 24px 24px;
+}
+
+.hero-left {
+  max-width: 400px;
 }
 
 .hero-left h1 {
@@ -69,7 +69,8 @@ body,
 }
 
 .hero-left p,
-.hero-img {
+.hero-img,
+.right-links a {
   color: #E5E7EB;
   font-size: 18px;
 }
@@ -95,8 +96,4 @@ body,
 .header .left-links a {
   color: #F9FAF8;
   font-weight: 600;
-}
-
-.header .right-links a {
-  color: #E5E7EB;
 }
