--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body,
 .hero-img,
 .info,
 .items,
-.item {
+.item,
+.quote {
   display: flex;
 }
 
@@ -118,7 +119,7 @@ body,
 .items {
   justify-content: space-around;
   align-items: center;
-  gap: 24px;
+  gap: 32px;
 }
 
 .item {
@@ -130,4 +131,27 @@ body,
 .item img {
   width: 200px;
   height: 300px;
+}
+
+.quote {
+  background-color: #E5E7EB;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 96px;
+}
+
+.quotation {
+  color: #1F2937;
+  font-style: italic;
+  font-size: 36px;
+  font-weight: lighter;
+  padding: 24px;
+}
+
+.quoted {
+  align-self: flex-end;
+  padding: 16px;
+  font-size: 18px;
+  font-weight: bold;
 }
